--- a/default.css
+++ b/default.css
@@ -23,6 +23,12 @@ html {
 
     }
 
+    h1 {
+            color: var(--pink);
+            text-align: center;
+        }
+        
+
     .button {
         border: solid;
         border-color: var(--pink);
@@ -48,17 +54,27 @@ html {
         margin-right: auto;
     }
 
-    #content {
-        color: (--black);
-        font-style: var(--primary-font);
+    .content {
+        text-align: center;
     }
 
     img {
         border-radius: 5px;
         width: 150px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    h1 {
-        color: var(--pink);
-        text-align: center;
+    table {
+        border: 2px solid var(--pink);
+        border-collapse: collapse;
     }
+
+    td {
+        border: 1px solid var(--pink);
+        text-align: center;
+        padding: 15px;
+    }
+
+    
