--- a/default.css
+++ b/default.css
@@ -81,6 +81,7 @@ html {
     }
 
     img {
+        border: 1px solid var(--black);
         border-radius: 5px;
         width: 150px;
         float: left;
@@ -89,12 +90,12 @@ html {
     }
 
     table {
-        border: 2px solid var(--pink);
+        border: 2px solid var(--purple);
         border-collapse: collapse;
     }
 
     td {
-        border: 1px solid var(--pink);
+        border: 1px solid var(--purple);
         text-align: center;
         padding: 15px;
     }
